[gd_scene load_steps=11 format=3 uid="uid://cuvud84asswxo"]

[ext_resource type="Script" path="res://scripts/note.gd" id="1_wfjr3"]
[ext_resource type="Texture2D" uid="uid://b3hh20lfay3ym" path="res://graphics/ui/Notes/Foot.png" id="2_qxoy8"]

[sub_resource type="Animation" id="Animation_7n3o2"]
resource_name = "Early_Animation"
length = 0.1605
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.46, 0, 1.04)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material_override:emission")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.839216, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0566446, 0, 0.1), Vector3(-0.017, 0, 0.14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeshInstance3D:transparency")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_55qoh"]
resource_name = "Hit_Animation"
length = 0.1605
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.46, 0, 1.04)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material_override:emission")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0566446, 0, 0.1), Vector3(-0.017, 0, 0.14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeshInstance3D:transparency")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_bv14t"]
resource_name = "Late_Animation"
length = 0.1605
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.46, 0, 1.04)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material_override:emission")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0566446, 0, 0.1), Vector3(-0.017, 0, 0.14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeshInstance3D:transparency")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_v20x8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material_override:emission")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0566446, 0, 0.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeshInstance3D:transparency")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t4uu7"]
_data = {
"Early_Animation": SubResource("Animation_7n3o2"),
"Hit_Animation": SubResource("Animation_55qoh"),
"Late_Animation": SubResource("Animation_bv14t"),
"RESET": SubResource("Animation_v20x8")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2i2a1"]
resource_local_to_scene = true
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.79

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lg1lq"]
transparency = 1
albedo_texture = ExtResource("2_qxoy8")
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 3.6
emission_texture = ExtResource("2_qxoy8")

[sub_resource type="PlaneMesh" id="PlaneMesh_b1xo8"]
size = Vector2(2.67, 1.035)

[node name="Note" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.125, 0)
script = ExtResource("1_wfjr3")

[node name="HitAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../CSGPolygon3D")
libraries = {
"": SubResource("AnimationLibrary_t4uu7")
}
speed_scale = 2.0

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0566446, 0, 0.1)
material_override = SubResource("StandardMaterial3D_2i2a1")
polygon = PackedVector2Array(0, 0, 0.1, 0.125, 0.2, 0)
depth = 2.0
smooth_faces = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.05924, 0, 0)
material_override = SubResource("StandardMaterial3D_lg1lq")
mesh = SubResource("PlaneMesh_b1xo8")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866897, -0.162292, 0.471329, 0, 0.945519, 0.325568, -0.498488, -0.282234, 0.819667, 0.435, 1.263, 2.076)

[connection signal="animation_finished" from="HitAnimation" to="." method="_on_hit_animation_animation_finished"]
